# matchref

./: .codacy.yml  .coverage  .gitignore  .pre-commit-config.yaml  .prospector.yaml  CONTRIBUTING.md  Install MatchRef (Linux).sh  Install MatchRef (Windows).bat  Install MatchRef.command  LICENSE  README.md  install_resolve.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: dependabot.yml
config/: default_config.json
docs/: architecture.md  config.md  fusion-apply-plan.md
matchref/: __init__.py  alignment.py  analysis_context.py  analysis_debug.py  analysis_sampling.py  clip_edit_transform.py  clip_filter.py  clip_metadata.py  config.py  conform_edl.py  conform_index.py  conform_paths.py  conform_xml.py  cornerpin_apply.py  debug_frames.py  edit_apply.py  edit_match_mode.py  edit_quantize.py  escalation.py  extensions.py  fps.py  fps_check.py  frame_prep.py  frame_provider.py  frame_read.py  fusion_apply.py  gui.py  lock_cut_align.py  logging_report.py  match_quality.py  media_probe.py  models.py  overlay_crop.py  perspective.py  pipeline.py  precision_align.py  reference_metrics.py  refine_strategies.py  reframe_detect.py  resolve_api.py  (+8 more)
scripts/: Install_MatchRef.py  MatchRef.py
tests/: conftest.py  test_adaptive_limits.py  test_alignment_thresholds.py  test_analysis_debug_bundles.py  test_analysis_sampling_stages.py  test_analyze_orchestration.py  test_apply_backends.py  test_apply_keyframes.py  test_center_translation.py  test_clip_filter.py  test_clip_metadata.py  test_conform_edl.py  test_conform_mapping.py  test_conform_offset.py  test_conform_paths.py  test_conform_xml.py  test_cornerpin_apply.py  test_difference_metric.py  test_ecc_consensus.py  test_ecc_path_alive.py  test_edit_match_mode.py  test_edit_quantize.py  test_fps.py  test_fps_check.py  test_frame_provider_warn.py  test_frame_read.py  test_fusion_apply.py  test_grade_invariant_match.py  test_grade_robust_refine.py  (+33 more)
(+2 files in other folders)
