[project]
name = "matchref"
version = "0.1.0"
description = "Offline reference transform match for DaVinci Resolve"
requires-python = ">=3.10"   # uses zip(strict=), PEP 604 unions at runtime

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    "E501",    # line length is handled by the formatter, not enforced hard
    "B008",    # function calls in arg defaults — common in Qt/CLI wiring
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["."]   # make the `matchref` package importable without installing it

[tool.coverage.run]
source = ["matchref"]

[tool.bandit]
# Codacy runs Bandit with this config. Findings triaged 2026-07-09:
# - B110/B112 (try/except pass|continue): deliberate defensive wrappers around
#   the DaVinci Resolve scripting API, which raises unpredictably per build.
# - B404/B603/B606/B607 (subprocess): fixed argv-list commands only — opening
#   the debug folder ("open"/xdg-open) and launching the bundled venv python.
#   No shell, no user-controlled input.
# - B314/B405 (xml.etree parse): conform EDL/XML files are local files the
#   artist picks in the GUI, not untrusted network input.
# B101 (assert in package code) intentionally stays enabled.
skips = ["B110", "B112", "B404", "B603", "B606", "B607", "B314", "B405"]

[tool.mypy]
# No python_version pin: mypy checks against the running interpreter. Pinning
# 3.10 breaks under new interpreters — numpy ≥2.5 stubs use PEP 695 `type`
# statements that mypy rejects when told to target 3.10. CI's lint job runs on
# 3.10, so minimum-version semantics are still enforced there.
files = ["matchref"]
ignore_missing_imports = true   # cv2/numpy/PySide6 ship no/partial stubs
warn_unused_ignores = true
warn_redundant_casts = true
